# Book-Library

./: .env.sample  Dockerfile  docker-compose.yml  library_fixture.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: nginx.conf
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_alter_customuser_username.py
users/templates/users/: login.html  register.html
