[tool.poetry]
name = "practicalwork5"
version = "0.1.0"
description = ""
authors = ["Tagir-Alisheykhov <ahitahir@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
ipython = "^9.0.2"
gunicorn = "^23.0.0"
django-redis = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
